added filtration and debug logs
